# SpeedDemon

./: .gitmodules  CMakeLists.txt  README.md  config.example.json
src/: bot.cpp  bot.hpp  common.hpp  logger.hpp  main.cpp  util.hpp
